# Homework

./: .gitignore  1.cpp  ADoronin_variant6.cpp  CMakeLists.txt  README.md  variant6.cpp
dz1/: main.cpp
dz2/: main.cpp
dz3/: main.cpp
dz4/: main.cpp
dz5/: main.cpp
dz6/: main.cpp
dz7/: main.cpp
dz8/: main.cpp
dz9/: main.cpp
include/: common.hpp  predicates.hpp
include/containers/: fwd_list.hpp  list.hpp
salted-caesar/: main.cpp
src/: common.hpp  dz1.hpp  dz2.hpp  dz3.hpp  dz4.hpp  dz5.hpp  dz6.hpp  dz7.hpp  dz8.hpp  is_prime.hpp  main.cpp  predicates.hpp
src/dz7_funcs/: mat_ops.cpp  mat_ops.hpp
